# ailib-wasm-test

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/wasm-browser/: Cargo.toml
crates/wasm-browser/src/: core_logic.rs  lib.rs
static/: index.html
static/wasm/: ailib_wasm.d.ts  ailib_wasm.js  ailib_wasm_bg.wasm  ailib_wasm_bg.wasm.d.ts  package.json
tests/: e2e.spec.js  package.json  playwright.config.js
