[package]
name = "ailib-wasm-browser"
version = "0.1.0"
edition = "2021"
authors = ["AI-Protocol Team"]
license = "MIT OR Apache-2.0"
description = "Browser WASM module exposing ai-lib-core protocol logic via wasm-bindgen"
repository = "https://github.com/hiddenpath/ai-wasm-test"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ai-lib-core = { path = "../../../ai-lib-rust/crates/ai-lib-core" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["js"] }
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
